--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "author": "Alexandru Munteanu <alexandru.munteanu@thinslices.com>",
   "license": "MIT",
   "scripts": {
+    "install": "(cd backend; yarn install) && (cd frontend; yarn install)",
+    
     "start:frontend": "cd frontend && yarn start",
     "start:backend": "cd backend && yarn start",
     "start:db": "docker run -d -p 27017:27017 --name interview mongo",
     "stop:db": "docker stop interview",
-    "clean:db": "docker rm -f interview"
+    
+    "clean:all": "yarn clean:db && yarn clean:backend && yarn clean:frontend",
+    "clean:db": "docker rm -f interview || echo",
+    "clean:backend": "rm -rf backend/node_modules",
+    "clean:frontend": "rm -rf frontend/node_modules frontend/build"
   }
 }
