--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "mongodb": "^2.2.33"
   },
   "scripts": {
     "start": "nodemon server.js"
